icons added to vulnerability view

--- a/bundles/plugin/plugin.xml
+++ b/bundles/plugin/plugin.xml
@@ -18,7 +18,7 @@
                commandId="com.blackducksoftware.integration.popupmenu.OpenWarningView"
                label="Open Black Duck Vulnerability View"
                style="push"
-      		   icon="icons/ducky.png">
+      		   icon="resources/icons/ducky.png">
               <visibleWhen>
          		<with
          				variable="selection">
@@ -39,13 +39,13 @@
                commandId="com.blackducksoftware.integration.popupmenu.OpenPreferences"
                label="Black Duck Settings..."
                style="push"
-      		   icon="icons/ducky.png">
+      		   icon="resources/icons/ducky.png">
          </command>
          <command
          		commandId="com.blackducksoftware.integration.popupmenu.OpenProjectPreferences"
          		label="Project Preferences..."
          		style="push"
-      		   icon="icons/ducky.png">
+      		   icon="resources/icons/ducky.png">
          	<visibleWhen>
          		<with
          				variable="selection">
@@ -78,7 +78,7 @@
                commandId="com.blackducksoftware.integration.popupmenu.OpenWarningView"
                label="Open Black Duck Vulnerability View"
                style="push"
-      		   icon="icons/ducky.png">
+      		   icon="resources/icons/ducky.png">
               <visibleWhen>
          		<with
          				variable="selection">
@@ -99,13 +99,13 @@
                commandId="com.blackducksoftware.integration.popupmenu.OpenPreferences"
                label="Black Duck Settings..."
                style="push"
-      		   icon="icons/ducky.png">
+      		   icon="resources/icons/ducky.png">
          </command>
          <command
          		commandId="com.blackducksoftware.integration.popupmenu.OpenProjectPreferences"
          		label="Project Preferences..."
          		style="push"
-      		   icon="icons/ducky.png">
+      		   icon="resources/icons/ducky.png">
          	<visibleWhen>
          		<with
          				variable="selection">
@@ -153,7 +153,7 @@
             class="com.blackducksoftware.integration.eclipseplugin.views.ui.VulnerabilityView"
             id="com.blackducksoftware.integration.eclipseplugin.views.ui.VulnerabilityView"
             name="Black Duck Vulnerabilities"
-            icon="icons/ducky.png"
+            icon="resources/icons/ducky.png"
             category="com.blackducksoftware.integration.eclipseplugin.views"
             restorable="true">
       </view>
